# llm-ops-sentinel-upgraded

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule.bak  docker-compose.yml  fix_groq.py  fix_mlflow.py  fix_proxy.py  fix_redis.py  fix_redis2.py  fix_redis3.py  fix_redis4.py  migrate.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  tracing.py
app/api/: golden.py  prompts.py  proxy.py  review.py
app/auth/: keys.py
app/core/: cost.py  hasher.py  router.py
app/evaluators/: judge.py
drift/: detector.py  embedder.py
monitoring/: alerts.py  metrics.py
scripts/: eval_regression_check.py  seed_golden_set.py
tests/: conftest.py  test_drift.py  test_evaluator.py  test_proxy.py  test_router.py
workers/: celery_app.py  tasks.py
